Fixed page behavior on Firefox

--- a/hugo_project/static/style.scss
+++ b/hugo_project/static/style.scss
@@ -60,6 +60,7 @@ $downloadTextHoverColor: #585858;
 	#container
 	{
 		display: block;
+		height: 100vh;
 	}
 }
 
